packages/fuels-macros/tests/ui/derive/tokenizable/struct_like_enum_variants_not_supported.rs
use fuels_macros::Tokenizable;

#[derive(Tokenizable)]
enum SomeEnum {
    A,
    B { something: u64 },
}

fn main() {}
